# galaxy-toolsmith

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  cli-reference.md  context-ladder-training.md  deployment.md  example.md  experiments.md  index.md  models.md  quickstart.md  todo.md
docs/assets/: brand.css
overrides/: main.html
scripts/: gtsm_context_ladder_train.sh  gtsm_llama_cpp_gguf.sh  gtsm_overnight_4xa100.sh  gtsm_unattended_mps_devstral.sh
src/galaxy_toolsmith/: __init__.py  http_client.py
src/galaxy_toolsmith/cache/: __init__.py  sources.py  xsd.py
src/galaxy_toolsmith/cli/: __init__.py  main.py
src/galaxy_toolsmith/client/: __init__.py  remote.py
src/galaxy_toolsmith/core/: __init__.py  config.py  manifests.py  paths.py
src/galaxy_toolsmith/data/: __init__.py  corpus.py
src/galaxy_toolsmith/inference/: __init__.py  artifacts.py  datatypes.py  evaluation.py  generation.py  output_diagnostics.py  postprocess.py  prompt_context.py  repository.py  runtime_discovery.py  source_archives.py  source_context.py  suite.py  udt.py  validation.py
src/galaxy_toolsmith/models/: __init__.py  training.py
src/galaxy_toolsmith/orchestration/: __init__.py  adapter_conversion.py  benchmark.py  distributed.py  export.py  promotion.py  training.py  training_estimates.py
src/galaxy_toolsmith/prompts/: __init__.py  loader.py
src/galaxy_toolsmith/prompts/templates/default/: udt_yaml_generate.txt  xml_critique.txt  xml_generate.txt
src/galaxy_toolsmith/providers/: __init__.py  base.py  external.py  local.py  ollama.py
src/galaxy_toolsmith/runtime/: __init__.py  capabilities.py  environment.py  estimates.py  mlx_lm_lora.py  model_source.py  progress.py  run_registry.py  status.py
src/galaxy_toolsmith/server/: __init__.py  app.py
tests/integration/: test_optional_external.py
tests/unit/: test_adapter_conversion.py  test_benchmark.py  test_benchmark_summary_cli.py  test_cli_detach_flags.py  test_context_ladder_script.py  test_corpus_docker.py  test_corpus_mapping.py  test_datatypes.py  test_distributed_training.py  test_estimates.py  test_evaluation.py  test_export.py  test_generation_prompt_context.py  test_generation_repair.py  test_http_client.py  test_local_provider.py  test_model_source_policy.py  test_ollama_provider.py  test_output_diagnostics.py  test_postprocess.py  test_progress.py  test_promotion.py  test_prompts_loader.py  test_repository_suite_generation.py  test_run_registry.py  test_runtime_capabilities.py  test_runtime_discovery.py  test_server_monitoring.py  test_source_archives.py  test_source_context.py  test_status_logging.py  test_training_orchestration.py  test_udt.py
