[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-toolsmith"
version = "0.2.1"
description = "Library-first toolkit for Galaxy wrapper dataset, training, and generation workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Galaxy Toolsmith contributors" }
]
keywords = ["galaxy", "bioinformatics", "tool-wrappers", "llm", "fine-tuning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.31",
  "rich>=13.0",
  "jsonschema>=4.20",
  "jinja2>=3.1",
  "galaxy-tool-util>=24.0",
]

[project.urls]
Documentation = "https://galaxy-toolsmith.tools.blankenberglab.org/"
Homepage = "https://galaxy-toolsmith.tools.blankenberglab.org/"
Issues = "https://github.com/BlankenbergLab/galaxy-toolsmith/issues"
Repository = "https://github.com/BlankenbergLab/galaxy-toolsmith"

[project.optional-dependencies]
# Local LLM training and inference (CUDA/ROCm).
# For MPS (Apple Silicon), install [mps] instead.
training = [
  "torch>=2.3",
  "transformers>=4.45",
  "datasets>=2.20",
  "peft>=0.13",
  "trl>=0.12",
  "accelerate>=0.33",
  "axolotl>=0.5",
  "deepspeed>=0.14",
  "bitsandbytes>=0.43",    # 4-bit / 8-bit quantization on CUDA/ROCm
  "sentencepiece>=0.2",
  "protobuf>=4.0",
]
# Apple Silicon (MPS) training and inference via mlx.
mps = [
  "mlx>=0.31.2,<0.32",
  "mlx-lm[train]>=0.31.3,<0.32",
  "mistral-common>=1.11",
]
# torchtune for portable fine-tuning (CPU / MPS / CUDA fallback without unsloth).
torchtune = [
  "torchtune>=0.4",
  "torch>=2.3",
]
# Unsloth accelerator layer (optional speed-up on CUDA/ROCm on top of [training]).
# Install AFTER [training]; follow unsloth CUDA-version-specific install instructions.
unsloth = [
  "unsloth>=2024.11",
]
# Evaluation and quality-gate tooling.
eval = [
  "galaxy-language-server>=0.15",
  "planemo>=0.75",
  "lxml>=5.0",
]
# Optional HTTP inference server (FastAPI + Uvicorn).
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "anyio>=4.0",
]
# MLX LoRA to PEFT adapter conversion.
adapter-conversion = [
  "numpy>=1.26",
  "safetensors>=0.4.5",
]
# Development tooling.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "anyio>=4.0",
  "numpy>=1.26",
  "safetensors>=0.4.5",
  "types-requests>=2.31",
  "types-pyyaml>=6.0",
]
# Documentation build tooling.
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
# Convenience meta-extra: everything except platform-specific GPU stacks.
all = [
  "galaxy-toolsmith[adapter-conversion,eval,server,dev,docs]",
]

[project.scripts]
gtsm = "galaxy_toolsmith.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
galaxy_toolsmith = ["prompts/templates/**/*.txt", "schemas/*.json"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "optional_external: opt-in tests requiring live external runtimes",
  "planemo_live: opt-in Planemo/Galaxy integration tests",
  "ollama_live: opt-in Ollama integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
